--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,10 +15,10 @@
 -->
 <resources>
     <!-- Primary color of the app (shown in the app bar) -->
-    <color name="primary_color">#01579b</color>
+    <color name="primary_color">#014b86</color>
 
     <!-- Primary dark color of the app (shown in the status bar) -->
-    <color name="primary_dark_color">#01508e</color>
+    <color name="primary_dark_color">#02457b</color>
 
     <!-- Background color for app -->
     <color name="tan_background">#FFF7DA</color>
